[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/UniverseSimulator.gd" id="1"]

[node name="UniverseSimulator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HeaderPanel" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/HeaderPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "üåå Universe Simulator"
theme_override_font_sizes/font_size = 24

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/HeaderPanel"]
layout_mode = 2
text = "√ó"
theme_override_font_sizes/font_size = 20

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Creation" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TemplateSection" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/TemplateSection"]
layout_mode = 2
text = "Template:"
custom_minimum_size = Vector2(100, 0)

[node name="TemplateSelector" type="OptionButton" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/TemplateSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameSection" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/NameSection"]
layout_mode = 2
text = "Name:"
custom_minimum_size = Vector2(100, 0)

[node name="UniverseNameInput" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/NameSection"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter universe name..."

[node name="RulesSection" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer"]
layout_mode = 2

[node name="RulesLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection"]
layout_mode = 2
text = "Universe Rules:"
theme_override_font_sizes/font_size = 18

[node name="PhysicsScale" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/PhysicsScale"]
layout_mode = 2
text = "Physics Scale:"
custom_minimum_size = Vector2(120, 0)

[node name="PhysicsSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/PhysicsScale"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
value = 1.0
step = 0.1

[node name="PhysicsValue" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/PhysicsScale"]
layout_mode = 2
text = "1.0"
custom_minimum_size = Vector2(40, 0)

[node name="TimeScale" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/TimeScale"]
layout_mode = 2
text = "Time Scale:"
custom_minimum_size = Vector2(120, 0)

[node name="TimeSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/TimeScale"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
value = 1.0
step = 0.1

[node name="TimeValue" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/TimeScale"]
layout_mode = 2
text = "1.0"
custom_minimum_size = Vector2(40, 0)

[node name="LODLevel" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/LODLevel"]
layout_mode = 2
text = "LOD Level:"
custom_minimum_size = Vector2(120, 0)

[node name="LODSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/LODLevel"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 4.0
value = 1.0
step = 1.0

[node name="LODValue" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/LODLevel"]
layout_mode = 2
text = "1"
custom_minimum_size = Vector2(40, 0)

[node name="MaxBeings" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/MaxBeings"]
layout_mode = 2
text = "Max Beings:"
custom_minimum_size = Vector2(120, 0)

[node name="MaxBeingsInput" type="SpinBox" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer/RulesSection/MaxBeings"]
layout_mode = 2
min_value = 10.0
max_value = 10000.0
value = 1000.0
step = 10.0

[node name="CreateButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer"]
layout_mode = 2
text = "‚ú® Create Universe"
theme_override_font_sizes/font_size = 18

[node name="CreationLog" type="RichTextLabel" parent="Panel/VBoxContainer/TabContainer/Creation/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=cyan]Universe Creation Console[/color]
Ready to birth new realities..."

[node name="Navigation" type="HSplitContainer" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2
split_offset = 400

[node name="UniverseTree" type="Tree" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer"]
layout_mode = 2

[node name="UniverseInfo" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer"]
layout_mode = 2

[node name="InfoDisplay" type="RichTextLabel" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer/UniverseInfo"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Select a universe to view details[/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer/UniverseInfo"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer/UniverseInfo/VBoxContainer"]
layout_mode = 2

[node name="EnterButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer/UniverseInfo/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üö™ Enter"

[node name="PortalButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer/UniverseInfo/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üåÄ Portal"

[node name="DeleteButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Navigation/HSplitContainer/UniverseInfo/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "‚ùå Delete"

[node name="Editor" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Editor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RuleLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer"]
layout_mode = 2
text = "Universe Rules:"
theme_override_font_sizes/font_size = 18

[node name="RuleEditor" type="ItemList" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 150)

[node name="RuleEditSection" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer"]
layout_mode = 2

[node name="RuleNameInput" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer/RuleEditSection"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Rule name..."

[node name="RuleValueInput" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer/RuleEditSection"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Rule value..."

[node name="SetRuleButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer/RuleEditSection"]
layout_mode = 2
text = "Set Rule"

[node name="BeingSection" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer"]
layout_mode = 2

[node name="BeingLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer/BeingSection"]
layout_mode = 2
text = "Beings in Universe:"
theme_override_font_sizes/font_size = 18

[node name="BeingList" type="ItemList" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer/BeingSection"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 150)

[node name="CreateBeingButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Editor/VBoxContainer/BeingSection"]
layout_mode = 2
text = "üåü Create Being"

[node name="Observation" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Observation"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsPanel" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer"]
layout_mode = 2

[node name="EntropyLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer/StatsPanel"]
layout_mode = 2
text = "Entropy: 0.0000"
theme_override_font_sizes/font_size = 16

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer/StatsPanel"]
layout_mode = 2

[node name="AgeLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer/StatsPanel"]
layout_mode = 2
text = "Age: 0.00s"
theme_override_font_sizes/font_size = 16

[node name="VSeparator2" type="VSeparator" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer/StatsPanel"]
layout_mode = 2

[node name="BeingsLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer/StatsPanel"]
layout_mode = 2
text = "Beings: 0 / 1000"
theme_override_font_sizes/font_size = 16

[node name="ConsciousnessGraph" type="Panel" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="ObservationLog" type="RichTextLabel" parent="Panel/VBoxContainer/TabContainer/Observation/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=cyan]Observation Log:[/color]
Monitoring universe consciousness..."